# STREAM-Dataset

./: README.md  pyproject.toml
baseline/: models.py  results.csv  run.py
baseline/results/: gru_10k_medium.csv  gru_10k_small.csv  gru_1k_small.csv  lstm_100k_medium.csv  lstm_100k_small.csv  lstm_10k_small.csv  lstm_1k_small.csv  transformer_decoder_100k_medium.csv  transformer_decoder_1k_small.csv  transformer_encdec_100k_medium.csv  transformer_encdec_100k_small.csv  transformer_encdec_10k_medium.csv  transformer_encdec_10k_small.csv  transformer_encdec_1k_small.csv
baseline/results/cross_situation/: cross_situation_gru_transformer_encdec.csv  cross_situation_lstm_transformer_decoder.csv  s_cross_situation_gru_transformer_encdec.csv  s_cross_situation_lstm_transformer_decoder.csv
baseline/results/esn/: ESN_N1000_medium.csv  ESN_N1000_small.csv  ESN_N100_medium.csv  ESN_N100_small.csv
baseline/results/esn_hp_opti/: report.md
baseline/results/run_1/: esn_10k_medium.csv  esn_10k_small.csv  esn_1k_medium.csv  esn_1k_small.csv  gru_100k_medium.csv  gru_100k_small.csv  gru_10k_medium.csv  gru_10k_small.csv  gru_1k_medium.csv  gru_1k_small.csv  lstm_100k_medium.csv  lstm_100k_small.csv  lstm_10k_medium.csv  lstm_10k_small.csv  lstm_1k_medium.csv  lstm_1k_small.csv  transformer_decoder_100k_medium.csv  transformer_decoder_100k_small.csv  transformer_decoder_10k_medium.csv  transformer_decoder_10k_small.csv  transformer_decoder_1k_medium.csv  transformer_decoder_1k_small.csv  (+6 more)
stream_dataset/: __init__.py  evals.py  tasks.py
stream_dataset/libs/: CSL.py
